blackboard_ws/log/build_2021-11-23_15-14-49/blackboard/stderr.log
  File "/home/mpcmeulensteen/blackboard_ws/install/blackboard/lib/python3.8/site-packages/blackboard/Robot.py", line 193
    if energyAtTask =! 0:
                    ^
SyntaxError: invalid syntax

